# agent-tools

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .typos.toml  Competition Submission Guidelines.md  README.md  pyproject.toml  requirements.txt  大赛提交需知.md
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/: .env.example  README.md  main.py  pyproject.toml
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/example/: .env.example
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/example/jiuwen/: weather_agent_openjiuwen.py  weather_agent_openjiuwen_ir.json  weather_agent_openjiuwen_report.txt
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/example/jiuwen_react_agent/: agent_ir.json  agent_report.md
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/example/jiuwen_react_agent/agent/: __init__.py  config.py  main.py  routers.py  tools.py  workflow.py
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/example/langgraph/: weather_agent.py
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/example/langgraph/react_agent/: __init__.py  config.py  graph.py  main.py  nodes.py  router.py  state.py
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/src/: restful_tool_router.py
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/src/lg2jiuwen_tool/: __init__.py  __main__.py  cli.py  generator.py  ir_models.py  migrator.py  parser.py  service.py
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/src/lg2jiuwen_tool/components/: __init__.py  ai_semantic.py  ast_parser.py  code_generator.py  file_loader.py  ir_builder.py  pending_check.py  project_detector.py  report.py  rule_extractor.py
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/src/lg2jiuwen_tool/ir/: __init__.py  models.py
Agent Innovation Challenge/比赛提交（Competition Submission）/九问生态开发兼容队 - LangGraph转九问tool/lg2jiuwen_plugin/src/routers/: __init__.py  lg2jiuwen_router.py
Agent Innovation Challenge/比赛提交（Competition Submission）/勇夺第一队-网页抓取tool/Competition Code/: README.md  pyproject.toml  run.py
Agent Innovation Challenge/比赛提交（Competition Submission）/勇夺第一队-网页抓取tool/Competition Code/src/web_scraper_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Agent Innovation Challenge/比赛提交（Competition Submission）/勇夺第一队-网页抓取tool/Competition Code/src/webscraper_tool/: app.py
cli/: README.md  __init__.py  handlers.py  logging_config.py  main.py  market.py  parsers.py  plugin.py  pyproject.toml
cli/openjiuwen_plugin/: __init__.py  handlers.py  logging_config.py  main.py  market.py  parsers.py  plugin.py  utils.py
cli/openjiuwen_plugin/schemas/: __init__.py  plugin.py
cli/schemas/: __init__.py
cli/tests/: test_plugin_commands.py
dev_tools_suite/log_parse/: README.md  pyproject.toml
dev_tools_suite/log_parse/src/trace_log_parse/: __init__.py  __main__.py  analysis.py  parser.py  report.py
marketplace/: .dockerignore  main.py  pyproject.toml
marketplace/common/huaweicloud/: huaweicloud_iam.py  huaweicloud_kms.py
marketplace/common/security/: security_utils.py
marketplace/plugins_market/core/: auth.py  config.py  database.py  errors.py  gitcode_user.py  oauth_session_store.py  s3_storage_client.py
marketplace/plugins_market/imports/: __init__.py  bundle_safe_extract.py  skill_entries.py  skill_import_service.py  yaml_util.py
marketplace/plugins_market/models/: market_assets.py
marketplace/plugins_market/repositories/: __init__.py  base_repository.py  market_assets_repository.py
marketplace/plugins_market/routers/: oauth_gitcode.py  plugin.py  register.py
marketplace/plugins_market/schemas/: common.py  plugin.py
marketplace/plugins_market/services/: __init__.py  plugin.py
marketplace/plugins_market/validation/: __init__.py  _pipeline.py  base.py  constants.py  plugin_yaml.py  zip_utils.py
marketplace/plugins_market/validation/types/: __init__.py  mcp_stdio.py  restful_api.py  skill.py  tools.py
plugins/azuredalle/: README.md  plugin.yaml  pyproject.toml
plugins/azuredalle/schemas/: tools.json
plugins/azuredalle/src/azuredalle_plugin/: __init__.py  _config.py  azure_dalle3.py  plugin.py
plugins/firecrawl/: README.md  plugin.yaml  pyproject.toml
plugins/firecrawl/schemas/: tools.json
plugins/firecrawl/src/firecrawl_plugin/: __init__.py  _config.py  _serialize.py  firecrawl_crawl.py  firecrawl_map.py  firecrawl_scrape.py  param_utils.py  plugin.py  v2_formats.py
plugins/google/: README.md  plugin.yaml  pyproject.toml
plugins/google/schemas/: tools.json
plugins/google/src/google_plugin/: __init__.py  _serpapi.py  google_image_search.py  google_search.py  plugin.py
plugins/maths/: README.md  plugin.yaml  pyproject.toml
plugins/maths/schemas/: tools.json
plugins/maths/src/maths_plugin/: __init__.py  eval_expression.py  plugin.py
plugins/mcp_sse/: README.md  plugin.yaml  pyproject.toml
plugins/mcp_sse/schemas/: tools.json
plugins/mcp_sse/src/mcp_sse_plugin/: __init__.py  _openjiuwen_mcp.py  mcp_call_tool.py  mcp_list_tools.py  plugin.py
plugins/openweathermap/: README.md  plugin.yaml  pyproject.toml
plugins/openweathermap/schemas/: tools.json
plugins/openweathermap/src/openweathermap_plugin/: __init__.py  common.py  plugin.py  weather_current.py  weather_forecast_16d.py  weather_forecast_30d.py  weather_forecast_5d.py
plugins/tavily/: README.md  plugin.yaml  pyproject.toml
plugins/tavily/schemas/: tools.json
plugins/tavily/src/tavily_plugin/: __init__.py  plugin.py  tavily_extract.py  tavily_map.py  tavily_research.py  tavily_search.py
(+251 files in other folders)
