[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjiuwentools"
dynamic = ["version", "dependencies"]
description = "OpenJiuwen Agent Tools - A comprehensive toolkit for building AI agent applications"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenJiuwen Team", email = "team@openjiuwen.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://gitcode.com/openJiuwen/agent-tools"
Repository = "https://gitcode.com/openJiuwen/agent-tools.git"
Issues = "https://gitcode.com/openJiuwen/agent-tools/issues"

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
version = {attr = "openjiuwentools.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
select = ["E", "F", "W", "I", "A", "B", "C", "D", "N", "Q", "S"]
ignore = ["E501", "D100", "D101", "D102", "D103", "D104", "D106", "D107", "D400", "D415", "S104", "S324"]
line-length = 120

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
fixable = ["A", "B", "C", "D", "E", "F", "I", "N", "Q", "S", "W"]

[tool.ruff.lint.isort]
known-first-party = ["openjiuwentools", "jiuwen_vllm_affinity"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]
"**/test_*.py" = ["S101"]
