[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjiuwentools"
dynamic = ["version", "dependencies"]
description = "OpenJiuwen Agent Tools - A comprehensive toolkit for building AI agent applications"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenJiuwen Team", email = "team@openjiuwen.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"

[project.optional-dependencies]
infer-router = ["openjiuwentools-infer-router"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
top = [
    "openjiuwentools-infer-router",
]

[project.urls]
Homepage = "https://gitcode.com/openJiuwen/agent-tools"
Repository = "https://gitcode.com/openJiuwen/agent-tools.git"
Issues = "https://gitcode.com/openJiuwen/agent-tools/issues"

[tool.setuptools]
packages.find = {where = [".", "packages"], include = ["openjiuwentools*"]}

[tool.setuptools.package-dir]
# 建立明确的目录映射：包名 = 物理目录
"openjiuwentools-infer-router" = "packages/infer_router"

[tool.setuptools.dynamic]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
fallback_version = "0.0.1"

# 声明工作区成员
[tool.uv.workspace]
members = ["packages/*"]

# 声明依赖来源为工作区
[tool.uv.sources]
openjiuwentools-infer-router = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "A", "B", "C", "D", "N", "Q", "S"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D106", "D107", "D400", "D415", "S104", "S324"]
fixable = ["A", "B", "C", "D", "E", "F", "I", "N", "Q", "S", "W"]

[tool.ruff.lint.isort]
known-first-party = ["openjiuwentools", "jiuwen_vllm_affinity"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101"]
"**/test_*.py" = ["S101"]
