[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjiuwen-plugin"
version = "0.0.1"
description = "openJiuwen Plugin CLI utilities"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28",
    "packaging>=23.0",
    "pydantic>=2.0",
]

[project.scripts]
openjiuwen-plugin = "openjiuwen_plugin.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openjiuwen_plugin", "openjiuwen_plugin.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
