[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace_tools"
version = "0.1.1"
description = "Minimal Store service for openJiuwen marketplace"
requires-python = ">=3.11.4"
dependencies = [
    "fastapi==0.115.11",
    "uvicorn[standard]>=0.35",
    "pydantic==2.11.7",
    "pydantic[email]==2.11.7",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.41",
    "pydantic-settings==2.5.2",
    "pymysql==1.1.1",
    "cryptography",
    "python-multipart",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["logs", "*.egg-info", "resources"]
include = ["*"]


