[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azuredalle-plugin"
version = "0.0.1"
description = "openJiuwen plugin for Azure OpenAI DALL-E 3 image generation."
license = { text = "MIT" }
authors = [{ name = "openJiuwen" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openjiuwen>=0.1.5",
    "openai>=1.56.0",
]

[tool.setuptools.packages.find]
where = ["src"]
