[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-plugin"
version = "0.0.1"
description = "openJiuwen plugin for Google Search and Google Image Search via SerpAPI."
license = { text = "MIT" }
authors = [{ name = "openJiuwen" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dependencies = [
    "openjiuwen>=0.1.5",
    "requests>=2.28.0",
]

[tool.setuptools.package-data]
google_plugin = ["data/*.json"]
