[project]
name = "web-scraper-tool"
version = "0.1.0"
description = "A general-purpose web scraping tool server for OpenJiuwen Agent Studio (CLOUD_API plugin)."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.26.0",
  "beautifulsoup4>=4.12.0",
]

[tool.uvicorn]
factory = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
